--- a/src/main/resources/templates/jichu/timetable_new.html
+++ b/src/main/resources/templates/jichu/timetable_new.html
@@ -98,7 +98,7 @@
 
                         <div class="layui-form-item">
                             <div class="layui-input-block">
-                                <input type="submit" class="layui-btn" lay-submit lay-filter="formDemo">添加完成</input>
+                                <button type="submit" class="layui-btn" lay-submit lay-filter="formDemo">添加完成</button>
                                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                             </div>
                         </div>
