--- a/src/main/resources/templates/shouye/teacher_add.html
+++ b/src/main/resources/templates/shouye/teacher_add.html
@@ -32,7 +32,19 @@
       		<input type="text" name="person_name" lay-verify="title" autocomplete="off" placeholder="请输入姓名" class="layui-input">
     		</div>
   		</div>
-  		
+
+		<div class="layui-form-item choice-box" >
+			<label class="layui-form-label ">课程</label>
+			<div class="layui-input-block">
+				<select name="course_id" lay-filter="aihao">
+					<option value="">请选择课程</option>
+					<a th:each="courseInfo:${courseInfoList}">
+						<option th:value="${courseInfo.getId()}">[[${courseInfo.courseName}]]</option>
+					</a>
+				</select>
+			</div>
+		</div>
+
   		<div class="layui-form-item" style="margin-top: 37px">
     		<label class="layui-form-label">图片</label>
     		<div class="layui-upload">
