--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -95,8 +95,8 @@
                                     <i class="el-icon-menu"></i>
                                     <span>基础设置</span>
                                 </template>
-                                <el-menu-item index="">课程设置</el-menu-item>
-                                <el-menu-item index="">课程安排</el-menu-item>
+                                <el-menu-item index="courseinfo/list">课程设置</el-menu-item>
+                                <el-menu-item index="/arrangeclass/list">课程安排</el-menu-item>
                             </el-submenu>
                             <el-submenu index="9">
                                 <template slot="title">
