--- a/src/main/resources/templates/shouye/study_add.html
+++ b/src/main/resources/templates/shouye/study_add.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>学习效果添加</title>
 	<link rel="stylesheet" type="text/css" href="../../static/css/layui.css" />
-<!--	<link rel="stylesheet" type="text/css" href="../../static/css/notice.css" />-->
+	<!--	<link rel="stylesheet" type="text/css" href="../../static/css/notice.css" />-->
 	<style type="text/css">
 		.layui-textarea{
 			width: 50%;
@@ -13,9 +13,9 @@
 			margin-top: 20px;
 			margin-bottom: 0px;
 		}
-		 .layui-breadcrumb{
-			 margin: 5%;
-		 }
+		.layui-breadcrumb{
+			margin: 5%;
+		}
 		#editor{
 			margin-left: 11%;
 			margin-bottom: 30px;
@@ -31,12 +31,12 @@
 </head>
 <body>
 <div class="layui-container">
-<!--	<img src="../../static/images/LOGO2.png"> <br><br>-->
-<!--	<span class="layui-breadcrumb">-->
-<!--  			<a href="/">首页</a>-->
-<!--  			<a>学习效果</a>-->
-<!--  			<a><cite>学习效果添加</cite></a>-->
-<!--			</span>			<br><br><br>-->
+	<!--	<img src="../../static/images/LOGO2.png"> <br><br>-->
+	<!--	<span class="layui-breadcrumb">-->
+	<!--  			<a href="/">首页</a>-->
+	<!--  			<a>学习效果</a>-->
+	<!--  			<a><cite>学习效果添加</cite></a>-->
+	<!--			</span>			<br><br><br>-->
 
 
 	<!--标题-->
@@ -45,6 +45,18 @@
 			<label class="layui-form-label">标题</label>
 			<div class="layui-input-block">
 				<input type="text" name="effect_name" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
+			</div>
+		</div>
+
+		<div class="layui-form-item choice-box" >
+			<label class="layui-form-label ">课程</label>
+			<div class="layui-input-block">
+				<select name="course_id" lay-filter="aihao">
+					<option value="">请选择课程</option>
+					<a th:each="courseInfo:${courseInfoList}">
+						<option th:value="${courseInfo.getId()}">[[${courseInfo.courseName}]]</option>
+					</a>
+				</select>
 			</div>
 		</div>
 
