--- a/src/main/resources/templates/shouye/dayiManage.html
+++ b/src/main/resources/templates/shouye/dayiManage.html
@@ -56,6 +56,12 @@
 <body>
 
 <div id="main" class="layui-container">
+    <select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
+        <option>请选择</option>
+        <div th:each="courseInfo:${courseInfoList}" >
+            <option th:value="|/question/${courseInfo.getId()}/list|"  th:text="${courseInfo.getCourseName()}">18信管01</option>
+        </div>
+    </select>
     <table class="layui-table" >
         <colgroup>
             <col >
@@ -67,7 +73,8 @@
             <th style="width: 9%;">序号</th>
             <th style="width: 9%;">学生ID</th>
             <th style="width: 10%;">姓名</th>
-            <th style="width: 28%;">问题内容</th>
+            <th style="width: 18%;">问题内容</th>
+            <th style="width: 10%;">课程名称</th>
             <th style="width: 12%;">是否回复</th>
             <th style="width: 16%;">记录时间</th>
             <th>操作</th>
@@ -79,6 +86,7 @@
             <td th:text="${question.sid}"></td>
             <td th:text="${question.stu_uname}"></td>
             <td th:utext="${question.content}"></td>
+            <td th:text="${question.courseName}"></td>
             <td th:text="${question.isreply}?'是':'否'" ></td>
             <td th:text="${question.dic_datetime}"></td>
             <td>
@@ -86,8 +94,8 @@
 <!--                <button type="button" class="layui-btn layui-btn-primary layui-btn-sm">-->
 <!--                    <a th:href="@{|${question.id}/delete|}">删除</a>-->
 <!--                </button>-->
-                <a type="button" class="layui-btn layui-btn-sm" th:href="@{|${question.id}/dayiMore|}">查看</a>
-                <a type="button" class="layui-btn layui-btn-sm layui-bg-red" th:href="@{|${question.id}/delete|}">删除</a>
+                <a type="button" class="layui-btn layui-btn-sm" th:href="@{|/question/${question.id}/dayiMore|}">查看</a>
+                <a type="button" class="layui-btn layui-btn-sm layui-bg-red" th:href="@{|/question/${question.id}/delete|}">删除</a>
             </td>
         </tr>
         </tbody>
